<resources>
    <!-- Base app strings -->
    <string name="app_name">GrammieGram</string>
    <string name="base_url">https://grammiegram.com/api/</string>
    <string name="auth_token">auth_token</string>

    <!-- BoardListActivity strings -->
    <string name="rv_example_text">First Last</string>
    <string name="rv_item_explination">View Board for:</string>
    <string name="loading_text">Fetching Data&#8230;</string>
    <string name="wifi_error">WiFi Not Found</string>
    <string name="server_error">Error Fetching Data</string>
    <string name="settings_menu">Settings</string>
    <string name="logout_menu">Log Out</string>
    <string name="retry_btn">Retry</string>
    <string name="action_settings">Settings</string>
    <string name="no_boards">You Have No Boards</string>

    <!-- Strings related to login -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">Invalid login. Please try again</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="no_account"><a href="https://grammiegram.com/signup">No account? Sign up!</a></string>
    <string name="forgot"><a href="https://grammiegram.com/forgot_password/">Forgot your password?</a></string>

    <!-- Board activity and fragment stings -->
    <string name="no_grams">You have no messages.</string>
    <string name="date">The date is %1$s</string>
    <string name="time">The time is %1$s</string>
    <string name="logo_content_desc">GrammieGram Logo</string>
    <string name="from">Message from %1$s %2$s:</string>
    <string name="dialogue_text">Are you sure you want to leave the board?</string>
    <string name="dialogue_positive">Yes</string>
    <string name="dialogue_negative">No</string>

</resources>
