<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">
    <TextView
        android:id="@+id/error"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        style="@style/ErrorText"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/bird"
        android:src="@drawable/vector_logo"
        android:contentDescription="@string/app_name"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@+id/error" />
    <EditText
        android:id="@+id/username"
        android:hint="@string/username_hint"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:layout_width="match_parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@+id/bird"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <EditText
        android:id="@+id/password"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:layout_width="match_parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@+id/username"
        android:imeOptions="actionDone"
        android:singleLine="true"/>
    <Button
        android:id="@+id/sign_in_button"
        android:text="@string/login_button"
        android:background="@color/grammiegramRed"
        android:textSize="15sp"
        android:onClick="signIn"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@+id/password" />
    <TextView
        android:id="@+id/no_account"
        android:text="@string/no_account"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_width="match_parent"
        style="@style/LinkText"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

</android.support.constraint.ConstraintLayout>
